限长问题修正